--- a/sportsphere-back/package.json
+++ b/sportsphere-back/package.json
@@ -17,10 +17,12 @@
     "dotenv-cli": "^7.1.0",
     "express": "^4.18.2",
     "nodemon": "^2.0.21",
+    "prisma": "^4.11.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.2"
   },
   "dependencies": {
+    "@prisma/client": "^4.11.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "joi": "^17.9.1",
