--- a/sportsphere-back/package.json
+++ b/sportsphere-back/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npx nodemon src/server.ts"
+    "dev": "npx nodemon src/server.ts",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -13,11 +13,15 @@
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.0",
     "@types/jsonwebtoken": "^9.0.1",
     "dotenv-cli": "^7.1.0",
+    "dotenv-expand": "^10.0.0",
     "express": "^4.18.2",
+    "jest": "^29.5.0",
     "nodemon": "^2.0.21",
     "prisma": "^4.11.0",
+    "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.2"
   },
