--- a/sportsphere-back/tsconfig.json
+++ b/sportsphere-back/tsconfig.json
@@ -1,7 +1,12 @@
 {
     "compilerOptions": {
-        "outDir": "dist",
-        "esModuleInterop": true,
+      "outDir": "dist",
+      "esModuleInterop": true,
+      "module": "CommonJS",
+      "moduleResolution": "Node",
+      "baseUrl": "src",
     },
-    "ts-node": {"esm": true}
-}
+    "ts-node": {
+      "esm": true
+    },
+  }
