--- a/sportsphere-back/package.json
+++ b/sportsphere-back/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "npx nodemon src/server.ts",
-    "test": "jest"
+    "dev": "NODE_ENV=development nodemon src/server.ts",
+    "dev:migration:generate": "dotenv -e .env.development prisma migrate dev",
+    "test": "NODE_ENV=test jest --passWithNoTests --runInBand",
+    "test:migration:generate": "dotenv -e .env.test prisma migrate dev"
   },
   "keywords": [],
   "author": "",
