--- a/sportsphere-back/tsconfig.json
+++ b/sportsphere-back/tsconfig.json
@@ -3,8 +3,14 @@
       "outDir": "dist",
       "esModuleInterop": true,
       "module": "CommonJS",
-      "moduleResolution": "Node",
+      "target": "es2020",
+      "rootDir": "src",
       "baseUrl": "src",
+      "paths": {
+        "@/*": [
+          "*"
+        ]
+      }
     },
     "ts-node": {
       "esm": true
