--- a/sportsphere-back/package.json
+++ b/sportsphere-back/package.json
@@ -13,6 +13,7 @@
   "author": "Isabelle Xavier",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.0",
@@ -29,6 +30,7 @@
   },
   "dependencies": {
     "@prisma/client": "^4.11.0",
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "joi": "^17.9.1",
