--- a/sportsphere-back/package.json
+++ b/sportsphere-back/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "@prisma/client": "^4.11.0",
     "bcrypt": "^5.1.0",
+    "cloudinary": "^1.35.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "joi": "^17.9.1",
