--- a/front/package.json
+++ b/front/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-loader-spinner": "^5.3.4",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.9.0",
     "styled-components": "^5.3.9"
   },
