--- a/front/package.json
+++ b/front/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^4.8.0",
     "react-loader-spinner": "^5.3.4",
     "react-modal": "^3.16.1",
+    "react-pro-sidebar": "^1.0.0",
     "react-router-dom": "^6.9.0",
     "styled-components": "^5.3.9"
   },
