--- a/back/package.json
+++ b/back/package.json
@@ -18,6 +18,7 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.0",
     "@types/jsonwebtoken": "^9.0.1",
+    "@types/supertest": "^2.0.12",
     "dotenv-cli": "^7.1.0",
     "dotenv-expand": "^10.0.0",
     "express": "^4.18.2",
@@ -35,6 +36,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "joi": "^17.9.1",
-    "jsonwebtoken": "^9.0.0"
+    "jsonwebtoken": "^9.0.0",
+    "supertest": "^6.3.3"
   }
 }
