--- a/back/package.json
+++ b/back/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "scripts": {
     "dev": "NODE_ENV=development nodemon src/server.ts",
+    "dev:seed": "dotenv -e .env.development prisma db seed",
     "dev:migration:generate": "dotenv -e .env.development prisma migrate dev",
     "test": "NODE_ENV=test jest --passWithNoTests --runInBand",
+    "test:seed": "dotenv -e .env.test prisma db seed",
     "test:migration:generate": "dotenv -e .env.test prisma migrate dev"
   },
   "keywords": [],
