feat: cleandb & disconnectdb helpers + jest config

--- a/back/tsconfig.json
+++ b/back/tsconfig.json
@@ -4,7 +4,10 @@
       "esModuleInterop": true,
       "module": "CommonJS",
       "target": "es2020",
-      "rootDir": "src",
+      "rootDirs": [
+        "src",
+        "tests"
+      ],
       "baseUrl": "src",
     },
     "ts-node": {
