--- a/back/package.json
+++ b/back/package.json
@@ -15,6 +15,7 @@
   "author": "Isabelle Xavier",
   "license": "ISC",
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
