--- a/back/tsconfig.json
+++ b/back/tsconfig.json
@@ -1,16 +1,13 @@
 {
-    "compilerOptions": {
-      "outDir": "dist",
-      "esModuleInterop": true,
-      "module": "CommonJS",
-      "target": "es2020",
-      "rootDirs": [
-        "src",
-        "tests"
-      ],
-      "baseUrl": "src",
-    },
-    "ts-node": {
-      "esm": true
-    },
+  "compilerOptions": {
+    "outDir": "dist",
+    "esModuleInterop": true,
+    "module": "CommonJS",
+    "target": "es2020",
+    "rootDirs": ["src", "tests"],
+    "baseUrl": "src"
+  },
+  "ts-node": {
+    "esm": true
   }
+}
