--- a/back/package.json
+++ b/back/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "prisma": {
+    "seed": "dotenv -e .env.development -- ts-node prisma/seed.ts"
+  },
   "scripts": {
     "dev": "NODE_ENV=development nodemon src/server.ts",
     "dev:seed": "dotenv -e .env.development prisma db seed",
