--- a/back/package.json
+++ b/back/package.json
@@ -2,11 +2,13 @@
   "name": "sportsphere-back",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "prisma": {
     "seed": "dotenv -e .env.development -- ts-node prisma/seed.ts"
   },
   "scripts": {
+    "start": "node dist/src/server.js",
+    "build": "npx tsc",
     "dev": "NODE_ENV=development nodemon src/server.ts",
     "dev:seed": "dotenv -e .env.development prisma db seed",
     "dev:migration:generate": "dotenv -e .env.development prisma migrate dev",
