--- a/front/package.json
+++ b/front/package.json
@@ -18,6 +18,7 @@
     "react-modal": "^3.16.1",
     "react-pro-sidebar": "^1.0.0",
     "react-router-dom": "^6.9.0",
+    "react-select": "^5.7.2",
     "styled-components": "^5.3.9"
   },
   "devDependencies": {
